# undertale_manager

./: LICENSE  README.md  makefile  pyproject.toml  undertale-manager.spec
data/: room_ids.csv
src/undertale_manager/: __init__.py  __main__.py  ids.py  tui.py  undertale_manager.tcss
tests/: test_undertale_manager.py
