[tool.poetry]
name = "undertale_manager"
version = "1.0.0"
description = "Manage multiple UNDERTALE save files!"
authors = ["AfterNoon PM <h2o.Drop2010+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
build = "^1.3.0"
flake8 = "^7.3.0"
pytest = "^9.0.1"
twine = "^6.2.0"
wheel = "^0.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
